<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MoneyApp</string>
    <string name="current_balance">Current Balance: $</string>
    <string name="add_transaction">Add Transaction:</string>
    <string name="withdrawal">Withdrawal</string>
    <string name="deposit">Deposit</string>
    <string name="action_settings">Settings</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="type">Type</string>
    <string name="all_transactions">All Transactions…</string>
    <string name="choose_categories">Choose Categories</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_hint">Name</string>
    <string name="amount_hint">Amount</string>
    <string name="pick_time">Choose Time</string>
    <string name="pick_date">Date</string>
    <string name="add_new_category">Add New Category</string>
    <string name="title_activity_screen_slide_pager">ScreenSlidePagerActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="accept_transaction">Accept Transaction</string>
    <string name="title_activity_add_transaction">AddTransactionActivity</string>
    <string name="title_activity_all_transactions">AllTransactionsActivity</string>
    <string name="title_activity_build_transaction">BuildTransactionActivity</string>
    <string name="title_activity_all_categories">AllCategoriesActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>

</resources>
